--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 body {
 	font-family: 'Avenir Next', Avenir, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	color: #5d5c56;
-	background: #fff;
+	background: #fbfbef;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
