--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,25 @@
 	@font-face {
-	font-family: 'codropsicons';
+	font-family: 'Lato-Regular';
 	font-weight: normal;
 	font-style: normal;
-	src: url('../fonts/codropsicons/codropsicons.eot');
-	src: url('../fonts/codropsicons/codropsicons.eot?#iefix') format('embedded-opentype'), url('../fonts/codropsicons/codropsicons.woff') format('woff'), url('../fonts/codropsicons/codropsicons.ttf') format('truetype'), url('../fonts/codropsicons/codropsicons.svg#codropsicons') format('svg');
+	src: url('../Lato/Lato-Regular.ttf');
+	
 }
 
 
 body {
-	font-family: 'Avenir Next', Avenir, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: "Lato-Regular";
 	color: #5d5c56;
-	background: #fbfbef;
+	background: #f9f7ed;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	letter-spacing: 2px;
+	word-spacing: 2px;
 }
 
-
+.st0{
+	box-shadow: inset 0 0 1em #fff, 0 0 1em red;
+}
 
 
 
@@ -51,7 +55,7 @@ body {
 }
 
 .title-down {
-	font-family: Baskerville, 'Baskerville Old Face', 'Hoefler Text', Garamond, 'Times New Roman', serif;
+	font-family: 'Lato-Regular',sans-serif;
 	font-size: 1.35em;
 	font-weight: 400;
 	line-height: 0.9;
@@ -62,9 +66,9 @@ body {
 
 		body {
 			margin: 0;
-	font-family: 'Avenir Next', Avenir, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: 'Lato-Regular', sans-serif;
 	color: #5d5c56;
-	background: #fff;
+	background: #f9f7ed;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
