--- a/pen_tool/css/style.css
+++ b/pen_tool/css/style.css
@@ -187,3 +187,150 @@ canvas.select {
   opacity: 0.5;
 }
 
+    html, body {
+      color: #023300;
+      background: #f3e5f5;
+      padding:0;
+      margin:0;
+      width:100%;
+      min-height:100%;
+      height: 100%;
+
+    }
+    body{
+      overflow: auto;
+    }
+    .centered{
+      display: flex;
+      justify-content: center;
+      position: relative;
+      margin-top:20px;
+      letter-spacing: 1px;
+      color: #100;
+    }
+    #container {
+      height:400px;
+      width:400px;
+    }
+    #left {
+      float:left;
+      width:50%;
+    }
+    #right {
+      float:left;
+      width:50%;
+      left:50%;
+    }
+    textarea{
+      margin: 10px 0px;
+      font-style: italic;
+      min-height: 110px;
+    }
+
+    .map_gallery{
+      width: 100%;
+    }
+
+    .gallery_item:hover{
+
+      background-color: #F3D6E4;
+      border-radius: 12px;
+      transform: scale(1.1,1.1);
+      transition: 0.4s;
+      -webkit-box-shadow: 0px 0px 74px 0px rgba(0,0,0,0.75);
+      -moz-box-shadow: 0px 0px 74px 0px rgba(0,0,0,0.75);
+      box-shadow: 0px 0px 74px 0px rgba(0,0,0,0.75);
+    }
+    .active_block{
+      background-color: #ffcf85;
+      border-radius: 12px;
+      transform: scale(1.1,1.1);
+      transition: 0.6s;
+      -webkit-box-shadow: 0px 0px 74px 0px rgba(0,0,0,0.75);
+      -moz-box-shadow: 0px 0px 74px 0px rgba(0,0,0,0.75);
+      box-shadow: 0px 0px 74px 0px rgba(0,0,0,0.75);
+    }
+    .buttons_bar{
+      margin-top: 8px;
+    }
+    #test {
+      background:#FF0000;
+      height:10px;
+      width:10px;
+      margin-top:-5px;
+      margin-left:-5px;
+      border-radius:5px;
+      position:relative;
+    }
+  h1{
+    margin-top: 10px;
+    margin-bottom: 0px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-style: bold;
+    text-align: center;
+    font-size: 2.5rem;
+    color: #64b5f6;
+    text-shadow: 3px 0px 9px rgba(69, 150, 150, 0.43);
+  }
+  nav{
+    background-color: #4db6ac;
+  }
+
+  .tap-target-wrapper.open .tap-target{
+    transform: scale(3.2);
+    opacity: 0.75;
+  }
+  .tap-target-content{
+    line-height: 20px;
+    font-size: 0.7em;
+    padding: 0 110px!important;
+  }
+
+  .tabs{
+   width: 70%;
+  }
+
+  #buttonWrapper {
+    position: absolute;
+    width: 30px;
+    top: 2px;
+    right: 2px;
+  }
+
+  .editor_button{       
+    padding: 8px 6px 0px 2px;
+    width: 30px;
+    margin: 0px 0px 2px 0px;
+    outline: none;
+  }
+  button:focus{ 
+    border: #000;
+  }
+
+  .material-icons{
+    color: #00796b;
+    }
+  nav i.material-icons{
+    line-height: 41px;
+    font-size: 30px;
+    }
+  #menu{
+    margin-right: 10px;
+    margin-top: 3px;
+   }
+  .result {
+    width: 5em;
+    height: 5em;
+    border-radius: 30%;
+    box-shadow: 0 2px 6px #000;
+    background: #95C066;
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 2em;
+  }
+  .indicator{
+    display: none;
+  }
+
+
