--- a/pen_tool/ready_page/css/style.css
+++ b/pen_tool/ready_page/css/style.css
@@ -17,7 +17,21 @@
 			z-index:-2;
   opacity: 0.7;
 		}
-				.text_wrapper{
+
+
+.flex_right{
+	display: flex!important;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: flex-end;
+}
+
+
+				div.text_wrapper{
+			display: flex!important;
+			flex-direction: column;
+			justify-content: flex-start;
+			align-items: flex-start;
 			position: relative;
 			padding: 5em 3em;
 			z-index: 1000;
@@ -28,10 +42,13 @@
 		}
 		.text_wrapper p{
 			word-break: break-all;
-			max-width: 600px;
+
 			margin: 0  0 2%;
 		}
 		.text_wrapper section{
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
 			width: 50%;
 			max-width: 700px;
 			word-wrap: break-word;
