--- a/src/css/ready_page.css
+++ b/src/css/ready_page.css
@@ -4,8 +4,14 @@
 		color: #5d5c56;
 	}
 
-
-
+.slick-item{
+	max-width: 100%;
+	width: 100%!important;
+	height: auto;
+}
+.slick-slider .slick-list {
+    transform: none;
+}
 		.wrapper{
  		 width: 100%;
   		height: 1040px;
@@ -18,7 +24,9 @@
   opacity: 0.7;
 		}
 
-
+.slider{
+	height: auto;
+}
 .flex_right{
 	display: flex!important;
 	flex-direction: column;
@@ -42,17 +50,19 @@
 		}
 		.text_wrapper p{
 			word-break: break-all;
-
+			max-width: 700px;
 			margin: 0  0 2%;
 		}
 		.text_wrapper section{
 			display: flex;
 			flex-direction: column;
 			align-items: flex-start;
-			width: 50%;
+			width: 700px;
 			max-width: 700px;
 			word-wrap: break-word;
+/*			position: relative;*/
 		}
+
 		.my-svg{
 			
 		}
