--- a/src/css/ready_page.css
+++ b/src/css/ready_page.css
@@ -56,7 +56,7 @@
 		.text_wrapper section{
 			display: flex;
 			flex-direction: column;
-			align-items: flex-start;
+			/*align-items: flex-start;*/
 			width: 700px;
 			max-width: 700px;
 			word-wrap: break-word;
