added modal dialog(light on/off) and all map components are grouped

--- a/src/css/ready_page.css
+++ b/src/css/ready_page.css
@@ -9,6 +9,12 @@
 	width: 100%!important;
 	height: auto;
 }
+.js-section br{
+	display: none;
+}
+.slick-single br{
+	display: none;
+}
 .slick-slider .slick-list {
     transform: none;
 }
