--- a/src/css/ready_page.css
+++ b/src/css/ready_page.css
@@ -55,7 +55,7 @@
 			z-index: 2000;
 		}
 		.text_wrapper p{
-			word-break: break-all;
+			/*word-break: break-all;*/
 			max-width: 700px;
 			margin: 0  0 2%;
 		}
@@ -65,7 +65,8 @@
 			/*align-items: flex-start;*/
 			width: 700px;
 			max-width: 700px;
-			word-wrap: break-word;
+			text-align: left;
+			/*word-wrap: break-word;*/
 /*			position: relative;*/
 		}
 .slick-single{
