--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -394,8 +394,11 @@ table p{
 .routeExample{
   width: 60%;
   height: 2px;
-  background-color: #000;
-  border-radius: 10px;
+}
+.route_type_block{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 .align_selection{
   display: flex;
