--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -13,8 +13,12 @@ body {
 .container{
   width: 90%!important;
 }
+.container_map{
+  width: 100%!important;
+  max-width: 100%;
+}
 .wrap_map{
-  width: 1200px;
+  width: 100%;
   height: 900px;
   overflow: hidden;
   border: 1px solid #ccc;
@@ -41,8 +45,8 @@ canvas.select {
  
   overflow: hidden;
   background-repeat: no-repeat;
-  width: 1200px;
-  height: 930px;
+  width: 100%;
+  height: 100%;
   position: relative;
 }
 
@@ -201,7 +205,13 @@ canvas.select {
     body{
       overflow: auto;
     }
-    .centered{
+    nav .brand-logo{
+      position: relative;
+    }
+    nav ul li{
+      padding: 0px 10px;
+    }
+    .centered_map{
       display: flex;
       justify-content: center;
       position: relative;
@@ -288,10 +298,46 @@ canvas.select {
     padding: 0 110px!important;
   }
 
+#movement{
+  background-image: url("../svg/btn_icons/025-move-1.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  padding: 22px;
+}
+.fixed-action-btn{
+  position: relative;
+  right: 0;
+  bottom: 0;
+}
 
+.background{
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+}
+.fixed-action-btn.horizontal ul{
+  left: 75px!important;
+  text-align: left;
+  transform: translateY(-50%);
+}
 .navbar-fixed, nav.nav-extended{
   height: 48px;
   line-height: 48px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.brand-logo{
+  margin-left: 15px;
+}
+.account{
+  margin-right: 10px;
 }
 .page-footer{
   padding-top: 0;
@@ -302,13 +348,22 @@ canvas.select {
   #buttonWrapper {
     position: absolute;
     width: 30px;
-    top: 2px;
-    right: 2px;
+    top: 0;
+    left: 0;
+    padding: 2% 2%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100%;
+    background-color: #f3e5f5;
+    border: 1px dashed #000;
+    border-left: 0;
   }
 
   .editor_button{       
-    padding: 8px 6px 0px 2px;
-    width: 30px;
+    padding: 14px;
+  
     margin: 0px 0px 2px 0px;
     outline: none;
   }
@@ -479,3 +534,28 @@ table p{
 .centered{
   letter-spacing: 0!important;
 }
+
+
+
+
+
+
+
+/*
+#A, #B {
+    position: absolute;
+}
+#A {
+    top: 0px;
+    width: 200px;
+    bottom: 0px;
+    background:orange;
+}
+#B {
+    top: 0px;
+    left: 200px;
+    right: 0;
+    bottom: 0px;
+    background:green;
+}
+*/
